笔记17学成在线-hot模块添加

--- a/notes/17学成在线案例.md
+++ b/notes/17学成在线案例.md
@@ -139,7 +139,7 @@
 
 
 
-##### course课程表模块 (右侧的)
+#### course课程表模块 (右侧的)
 
 结构图如下：
 
@@ -224,3 +224,24 @@
 - 3号盒子版权 **copyright**  左对齐 
 
 - 4号盒子 链接组 **links**  右对齐
+
+
+
+#### hot  模块添加
+
+![1571385860679](http://images.newstar.net.cn/sally-imgs1571385860679.png) 
+
+**分析:**
+
+1. 一个大的 `li` 中包含 一个课程图片，课程介绍文字信息，还有hot的小图标；
+2. hot图片**重叠**在课程图片上面—— 脱标，不占位置，需要使用**绝对定位**；
+3. hot图片**重叠**在**li的右上方 —— 需要**使用边偏移确定准确位置。
+
+
+
+**小结:**
+
+1. **子绝父相** —— **子元素**使用**绝对定位**，**父元素**使用**相对定位**；
+2. **与浮动的对比**：
+   * **绝对定位**：脱标，**利用边偏移指定准确位置**；
+   * **浮动**：脱标，不能指定准确位置，**让多个块级元素在一行显示**。
